# AgentChaos

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  action.yml  pyproject.toml
.claude/agents/: evaluator.md  executor.md  planner.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: agentchaos-demo.yml  ci.yml
agentchaos/: __init__.py  cli.py  seq.py  verdict.py  violations.py
agentchaos/budget/: __init__.py  check.py  schema.py
agentchaos/chaos/: __init__.py  injectors.py  policy.py  proxy.py  server.py
agentchaos/detectors/: __init__.py  cost_explosion.py  loop.py  retry_storm.py  runner.py  schema.py
agentchaos/otel/: __init__.py  emit.py  spans.py
agentchaos/profile/: __init__.py  causes.py  compare.py  metrics.py
agentchaos/replay/: __init__.py  detect.py  schema.py  transport.py
agentchaos/report/: __init__.py  junit.py  markdown.py  terminal.py
agentchaos/runner/: __init__.py  coordinator.py  session.py
agentchaos/scenario/: __init__.py  loader.py  schema.py
agentchaos/trace/: __init__.py  reader.py  recorder.py  schema.py
agentchaos/transport/: __init__.py  base.py  http.py
docs/: http-contract.md  release-checklist.md  v1-plan.md
docs/decisions/: 0001-trace-format-jsonl-not-sqlite.md  0002-no-llm-as-judge-in-core.md  0003-chaos-via-proxy-not-instrumentation.md  0004-defer-langgraph-adapter-to-v2.md  README.md
docs/launch/: content-calendar.md  posts.md  release-v0.1.0.md
examples/action-demo/: README.md
examples/refund-agent/: README.md
tests/: conftest.py  test_smoke.py
tests/e2e/: test_demo.py
tests/integration/: test_chaos_e2e.py  test_cli.py  test_cli_report_outputs.py  test_detectors_budget_gating.py  test_export_otel_otlp.py  test_replay_cli.py  test_runner_end_to_end.py
tests/unit/: test_action_metadata.py  test_budget.py  test_causes.py  test_chaos_injectors.py  test_chaos_policy.py  test_chaos_proxy.py  test_chaos_trace_events.py  test_compare.py  test_detectors_cost_explosion.py  test_detectors_loop.py  test_detectors_retry_storm.py  test_detectors_runner.py  test_export_otel_cli.py  test_http_transport.py  test_junit_report.py  test_markdown_report.py  test_metrics.py  test_otel_emit.py  test_otel_spans.py  test_replay_detect.py  test_replay_transport.py  test_scenario_hash.py  test_scenario_loader.py  test_seq.py  test_terminal_report.py  test_trace_roundtrip.py  test_verdict.py  test_verdict_replay.py
(+47 files in other folders)
