[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentchaos-reliability"
version = "0.1.0"
description = "Open-source reliability testing for tool-using AI agents: record, profile cost, detect regressions before production."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "AgentChaos contributors" }]
keywords = ["llm", "agents", "testing", "reliability", "cost", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "rich>=13.0,<14.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "syrupy>=4.6",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "types-PyYAML>=6.0",
]
demo = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.scripts]
agentchaos = "agentchaos.cli:app"

[project.urls]
Homepage = "https://github.com/NoraXu-0111/AgentChaos"
Repository = "https://github.com/NoraXu-0111/AgentChaos"
Issues = "https://github.com/NoraXu-0111/AgentChaos/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentchaos"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: integration tests that may spin up local servers",
    "e2e: end-to-end tests of the demo",
]

[tool.coverage.run]
source = ["agentchaos"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
